@@ -1,6 +1,10 @@
 freebsd-smbfs (9.0~svn227117-3) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
   * Switch to canonical Vcs URLs.
+
+  [ Robert Millan ]
+  * Fetch source code securely (https) in get-orig-source.
 
  -- Guillem Jover <guillem@debian.org>  Mon, 29 Jul 2013 12:31:38 +0200
 
